# trellix-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
migrations/: README.md  env.py
migrations/versions/: 20260404_0001_initial_users_sessions.py  20260406_0002_remove_sessions_access_token.py  20260406_0003_sessions_hashed_refresh_token.py  20260407_0004_drop_sessions_table.py  20260408_0005_create_projects_table.py  20260409_0006_project_status_enum_pending_cancelled.py  20260415_0007_remove_project_priority_column.py  20260504_0008_align_projects_schema_add_tasks_tech_stack.py  20260505_0009_drop_project_category_add_task_domain.py  20260524_0010_project_status_is_archived.py  20260524_0011_drop_project_stage_simplify_dates.py  20260524_0012_drop_project_type_and_tech_stack.py  20260524_0013_project_hard_delete_drop_is_deleted.py  20260524_0014_task_hard_delete_drop_is_deleted.py  20260526_0015_create_notes_table.py  20260526_0016_notes_project_id_nullable.py
scripts/: __init__.py  cli.py
src/: __init__.py  config.py  custom_openapi.py  docs.py  main.py  run.py
src/auth/: __init__.py  bearer_header.py  session_store.py
src/controllers/: auth_services.py  user_services.py  utility_services.py
src/core/: config.py
src/database/: connect.py  enums.py  models.py
src/db/: __init__.py  postgres.py  redis_client.py
src/middleware/: authorization.py  logging.py  rate_limitter.py
src/models/: __init__.py  auth.py  database.py  enums.py  misc.py  note.py  project.py  user.py
src/routers/: __init__.py  auth.py  misc.py  note.py  project.py  user.py
src/routes/: auth.py  user.py  utility.py
src/schemas/: auth_schemas.py  default_schemas.py  requests.py  responses.py  user_schemas.py
src/services/: __init__.py  auth.py  note.py  project.py  user.py
src/utils/: __init__.py  keys.py  logging.py
tests/: __init__.py  conftest.py  test_auth.py  test_main.py  test_misc.py
