[project]
name = "trellix-backend"
version = "0.1.0"
description = "Backend services for Trellix Project Manager."
authors = [
    {name = "MuzaffarShaikh0201",email = "114210961+MuzaffarShaikh0201@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "cachetools (>=6.1.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.scripts]
trellix-backend = "src.run:server"
local = "src.run:local"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
