[project]
name = "trellix-backend"
version = "0.1.0"
description = "Backend services for Trellix Project Manager."
authors = [
    {name = "Muzaffar Shaikh",email = "114210961+MuzaffarShaikh0201@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
]


[tool.poetry]
name = "trellix-backend"
version = "0.1.0"
description = "Backend services for Trellix Project Manager."
authors = ["MuzaffarShaikh0201 <muzaffarshaikh0201@gmail.com>"]
packages = [{include = "src"}, {include = "scripts"}]


[tool.poetry.scripts]
api = "scripts.cli:api"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
